public/studentsubmission/Logs/demo1/[1][54468661][demo1][h][A].c.log
Compile Error
[1][54468661][demo1][h][A].c:1:1: error: expected identifier or '(' before numeric constant
 123
 ^~~
